--- a/assets/css/gazeimg.css
+++ b/assets/css/gazeimg.css
@@ -22,6 +22,7 @@ img[data-gazeimg],.gazeimg-content[data-rlong="n"] img {cursor: pointer;}
 	filter: brightness(1);animation:gia-darken 2s infinite linear alternate-reverse;
 	display: flex;align-items: center;justify-content: center;
 	vertical-align: top;overflow: hidden;position: relative;
+	width: 100%;height: 100%;object-fit: cover;
 }
 .gi-darken.gi-failload {animation: none;}
 .gi-darken a {display: block;text-decoration: none;color: #fff !important;text-align: center;word-break: break-all;}
